<?xml version="1.0"?>
<package>
  <name>mcts_network</name>
  <version>0.0.0</version>
  <description>The mcts_network package</description>
  <maintainer email="dyros-vehicle@todo.todo">mcts_network Maintainer</maintainer>
  
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>ros_py</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  
  <export>
  </export>
</package>
